momentuHMM 1.5.5 2022-10-18
-----------------
CHANGES

* raster package moved to Imports as it is no longer imported by crawl>=2.3.0


momentuHMM 1.5.4 2021-09-02
-----------------
NEW FEATURES

* CIreal argument 'm' will now accept a 'miHMM' object

CHANGES

* removed implicit conversions in C++ code that triggered compilation warnings on macOS with -Wconversion -Wno-sign-conversion in CPPFLAGS

BUG FIXES

* when using the normal random walk data stream distributions ("rw_norm", "rw_mvnorm2", or "rw_mvnorm3") in fitHMM (and MIfitHMM), any additional data streams were erroneously offset by one time step during model fitting; previous analyses using a normal random walk data stream in addition to any other data stream(s) should be re-run

* CIreal produced an error when the 'm' argument was a 'miSum' object


momentuHMM 1.5.3 2021-07-06
-----------------
NEW FEATURES

* 'return' argument added to plotStationary function for returning stationary probabilities, standards errors, and confidence intervals as a list

* progress bar added when using doFuture parallel backend

CHANGES

* doFuture is now the default parallel backend; to run functions with ncores>1, the doFuture and future packages must be installed

* data stream names can no longer be 'beta', 'delta', 'pi', 'g0', or 'theta'

* data stream names can no longer begin with 'beta', 'delta', 'g0', or 'theta'

* added additional checks for unused arguments passed down from a calling function (e.g. fitHMM, prepData); these were previously ignored

* added additional checks for undefined data stream or parameter names in common list arguments (e.g. DM, workBounds, userBounds); these were previously ignored

* the following packages have been moved to 'Suggests' and are now used conditionally: car, data.tree, extraDistr, geosphere, mitools, nleqslv, prodlim, qdapRegex, and survival. If any of these are packages needed, users will be prompted to install.

BUG FIXES
