@@ -1,12 +1,17 @@
 Package: momentuHMM
 Type: Package
 Title: Maximum Likelihood Analysis of Animal Movement Behavior Using Multivariate Hidden Markov Models
-Version: 1.5.5
-Date: 2022-10-18
+Version: 1.5.6
+Date: 2025-07-21
 Depends:
     R (>= 2.10)
-Author: Brett McClintock, Theo Michelot
-Maintainer: Brett McClintock <brett.mcclintock@noaa.gov>
+Authors@R: c(person(given = "Brett",
+                    family = "McClintock",
+                    role = c("aut", "cre"),
+                    email = "brett.mcclintock@noaa.gov"),
+             person(given = "Theo",
+                    family = "Michelot",
+                    role = "aut"))
 Description: Extended tools for analyzing telemetry data using generalized hidden Markov models. Features of momentuHMM (pronounced ``momentum'') include data pre-processing and visualization, fitting HMMs to location and auxiliary biotelemetry or environmental data, biased and correlated random walk movement models, hierarchical HMMs, multiple imputation for incorporating location measurement error and missing data, user-specified design matrices and constraints for covariate modelling of parameters, random effects, decoding of the state process, visualization of fitted models, model checking and selection, and simulation. See McClintock and Michelot (2018) <doi:10.1111/2041-210X.12995>.
 License: GPL-3
 LazyData: TRUE
@@ -53,7 +58,7 @@ Suggests:
     prodlim,
     nleqslv,
     qdapRegex
-RoxygenNote: 7.2.1
+RoxygenNote: 7.3.2
 Encoding: UTF-8
 NeedsCompilation: yes
 VignetteBuilder: R.rsp
