@@ -1,3 +1,10 @@
+momentuHMM 1.5.6 2025-07-21
+-----------------
+CHANGES
+
+* updated DESCRIPTION, CITATION, and Rd files as requested by CRAN
+
+
 momentuHMM 1.5.5 2022-10-18
 -----------------
 CHANGES
